deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 9
  selector:
    matchLabels:
      app: nginx
      type: backend
      env: prod
  template:
    metadata:
      labels:
        app: nginx
        type: backend
        env: prod
    spec:
      containers:
      - name: nginx
        image: gcr.io/google-samples/hello-app:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 8080
