podconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podconfigmap
  labels:
    name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 82
