podconfigmap3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podconfigmap3
  labels:
    name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      #env:
      #- name: BASE_URL
      # value: base_url
      #envFrom:
      #  - configMapRef:
      #      name: eng-config2
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 82
      volumeMounts:
        - name: config-volume
          mountPath: /config
  volumes:
    - name:  config-volume
      configMap:
        name: eng-config2
