service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxv1
spec:
  type: NodePort
  selector:
    app: nginxv1
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
