service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxv2
spec:
  type: NodePort
  selector:
    app: nginxv2
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
