service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxv3
spec:
  type: ExternalName
  externalName: otherexternal
  selector:
    app: nginxv3
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
