ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
  - host: demo.io
    http:
      paths:
      - pathType: Prefix
        path: "/one"
        backend:
          service:
            name: nginxv1
            port: 
              number: 80
  - host: demo.io
    http:
      paths:
      - pathType: Prefix
        path: "/two"
        backend:
          service:
            name: nginxv2
            port: 
              number: 80
  - host: demo.io
    http:
      paths:
      - pathType: Prefix
        path: "/three"
        backend:
          service:
            name: otherexternal
            port: 
              number: 80
